--- a/index.html
+++ b/index.html
@@ -34,17 +34,28 @@
         </button>
     </section>
 
-    <div class="alinhar">
-        <section class="carrossel">
-            <img id="carrosselImagem" src="" alt="livros">
+    <section class="detalhesFundo">
+        <div class="exibicao">
+            <section class="carrossel">
+                <img id="carrosselImagem" src="" alt="livros">
 
-            <div class="botaoCarrossel">
-                <button class="container botao txt" id="anterior">Anterior</button>
-                <button class="container botao txt" id="proximo">Próxima</button>
-            </div>
+                <div class="botaoCarrossel">
+                    <button class="container botao txt" id="anterior">Anterior</button>
+                    <button class="container botao txt" id="proximo">Próxima</button>
+                </div>
+            </section>
+
+
+        </div>
+
+        <section class="detalhes">
+            <h1 class="titulo" id="detalhesLivro">fsd</h1>
+            <p class="txt" id="detalhesAutor">sfds</p>
+            <p class="txt" id="detalhesAno">dsfsd</p>
         </section>
-    </div>
+    </section>
 
+    <!-- JS carrossel -->
     <script>
         let imgIndice = 0;
 
