--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </div>
 
         <section class="detalhes">
-            <h1 class="titulo" id="detalhesLivro">fsd</h1>
-            <p class="txt" id="detalhesAutor">sfds</p>
-            <p class="txt" id="detalhesAno">dsfsd</p>
+            <h1 class="titulo" id="detalhesLivro"></h1>
+            <p class="txt" id="detalhesAutor"></p>
+            <p class="txt" id="detalhesAno"></p>
         </section>
     </section>
 
